<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundRed">



    <TextView
        android:id="@+id/leaveReviewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaveReview"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/writeReviewBox"
        android:layout_width="310dp"
        android:layout_height="480dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/buttonOffWhite"
        android:hint="@string/reviewHint"
        android:maxLength="300"
        android:padding="10dp"
        android:textColor="@color/backgroundRed"
        android:textColorHint="@color/buttonColorRed"
        android:textSize="18dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaveReviewText" />

    <android.widget.Button
        android:id="@+id/submitReviewButton"
        android:layout_width="309dp"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/buttonOffWhite"
        android:text="@string/submitButtonText"
        android:textColor="@color/buttonColorRed"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeReviewBox" />

</androidx.constraintlayout.widget.ConstraintLayout>